# EmployeeMGR

./: README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 8a395a872390_initial_migration.py
backend/app/: auth.py  database.py  main.py
backend/app/crud/: employee.py
backend/app/models/: employee.py  user.py
backend/app/routers/: __init__.py  auth.py  employee.py  user.py
backend/app/schemas/: employee.py
backend/app/scripts/: create_admin.py
backend/scripts/: setup.sh
backend/tests/: test_auth.py  test_employee.py  test_user.py
frontend/: Dockerfile  README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: Card.vue  ContractualEmployeeForm.vue  Icon.vue  Modal.vue  RegularEmployeeForm.vue
frontend/src/interfaces/: employee.ts
frontend/src/router/: index.ts
frontend/src/services/: auth.ts  base.ts  employee.ts
frontend/src/tests/components/: Card.test.ts  ContractualEmployeeForm.test.ts  Icon.test.ts  Modal.test.ts  RegularEmployeeForm.test.ts
frontend/src/tests/components/__snapshots__/: Card.test.ts.snap  ContractualEmployeeForm.test.ts.snap  Icon.test.ts.snap  Modal.test.ts.snap  RegularEmployeeForm.test.ts.snap
frontend/src/tests/views/: HomeView.test.ts  LoginView.test.ts
frontend/src/utils/: parse-employee.ts
frontend/src/views/: HomeView.vue  LoginView.vue
(+2 files in other folders)
